src/test/resources/cocos/invalid/imports/importIsDefined/Import Vehicle.sysml
/* (c) https://github.com/MontiCore/monticore */
package 'Import Vehicle'{
  import 'ThisPackageDoesNotExist'::Vehicle as AlreadyInScope;
}
